--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img id="logo" src="images/aerohive_logo.png">
             </span>
             <span id="asat">
-                <span>Aerohive Stand Alone Tool v0.1.1</span>
+                <span>Aerohive Stand Alone Tool v0.1.3</span>
             </span>
     </div>
 </header>
@@ -152,10 +152,7 @@
                     <span>Service Type</span>
                 </td>
                 <td>
-                    <span>Destinations</span>
-                </td>
-                <td>
-                    <span>Test Results</span>
+                    <span>Test</span>
                 </td>
             </tr>
             <tr class="breadcrumb-row">
@@ -164,9 +161,6 @@
                 </td>
                 <td>
                         <i class="fa fa-circle-o fa-lg firewall-button" id="firewall-service"></i>
-                </td>
-                <td>
-                        <i class="fa fa-circle-o fa-lg firewall-button" id="firewall-test-dest"></i>
                 </td>
                 <td>
                         <i class="fa fa-circle-o fa-lg firewall-button" id="firewall-test-run"></i>
