--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         $('#' + tab + "-button").addClass("selected");
         switch (tab) {
             case "firewall":
-                displayFirewallTest();
+                initFirewallTest();
                 break;
             case "license":
                 displayLicense();
