--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <script type="text/javascript" src='./js/asat.ui.js'></script>
     <link rel="stylesheet" href="./css/asat.css"/>
     <link rel="stylesheet" href="./css/jquery.qtip.min.css"/>
+    <link rel="stylesheet" href="./css/ah-styles.min.css"/>
 </head>
 <script>
-    // var generate = require("jade").compile
+    const EventEmitter = require('events').EventEmitter;
+    var messenger = new EventEmitter();
 </script>
 <body>
 <!-- ============================================ -->
@@ -129,6 +131,14 @@
                 </ul>
             </li>
         </ul>
+        <span class="controls">
+        <input name="services-field-1"  class="ace-switch ace-switch-7" type="checkbox" checked="checked">
+        <span class="lbl switch-label"></span>
+        </span>
+                <span class="controls">
+        <input name="services-field-1"  class="ace-switch ace-switch-8" type="checkbox" checked="checked">
+        <span class="lbl switch-label"></span>
+        </span>
         </div>
     </article>
 </section>
