--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <section class="main no-console" id="home">
     <article>
         <h2>Aerohive Stand Alone Tool</h2>
-        <p>This is a Free APP build to help Aerohive partners and customers. This APP is designed to provide helps
+        <p>This is a Free APP built to help Aerohive partners and customers. This APP is designed to provide help
             on site:</p>
         <div class='ui-sec-tle'><h3>Troubleshoot connection issues</h3></div>
                 <ul>
