--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" onclick="main('survey')" id="survey-button" class="main-button">
+                <a href="#" onclick="main('survey')" id="survey-button" style="display: none;" class="main-button">
                             <span class="fa-stack fa-lg">
                               <i class="fa fa-circle-thin fa-stack-2x"></i>
                               <i class="fa fa-street-view fa-stack-1x "></i>
